--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,8 @@
   </head>
   <style>
     body {
-      background-color: #33333d;
+      /* background-color: #33333d; */
+      background-color: #232438;
     }
   </style>
   <body>
